--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MDU Solutions Widget</title>
+    <title>4 Ways to Turn Brownfield MDUs into Revenue Drivers (Widget)</title>
     <style>
         /* Embed Container Reset */
         .mdu-widget * {
