--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4 Ways to Turn Brownfield MDUs into Revenue Drivers (Widget)</title>
+    <title>MDU Solutions Widget</title>
     <style>
         /* Embed Container Reset */
         .mdu-widget * {
@@ -45,7 +45,7 @@
 
         /* Compact Header */
         .mdu-widget .widget-header {
-            padding: 30px 25px;
+            padding: 35px 25px 40px;
             text-align: center;
             background: rgba(0, 0, 0, 0.5);
             backdrop-filter: blur(10px);
@@ -53,18 +53,19 @@
         }
 
         .mdu-widget h2 {
-            font-size: 24px;
-            font-weight: 300;
-            line-height: 1.3;
-            margin-bottom: 10px;
+            font-size: 48px;
+            font-weight: 700;
+            line-height: 1.2;
+            margin-bottom: 15px;
             text-shadow: 0 0 20px rgba(236, 72, 153, 0.5);
             color: #ffffff !important;
         }
 
         .mdu-widget .subtitle {
-            font-size: 14px;
-            color: rgba(255, 255, 255, 0.8) !important;
-            font-weight: 300;
+            font-size: 16px;
+            color: rgba(255, 255, 255, 0.9) !important;
+            font-weight: 400;
+            margin-top: 10px;
         }
 
         /* Compact Navigation Tabs */
@@ -260,12 +261,16 @@
         /* Quote */
         .mdu-widget .quote {
             background: rgba(168, 85, 247, 0.08);
+            border: none;
             border-left: 3px solid #ec4899;
-            padding: 15px 20px;
-            margin: 20px 0;
+            border-right: 3px solid #ec4899;
+            padding: 20px 30px;
+            margin: 25px 0;
             font-style: italic;
             color: #00ffff !important;
-            font-size: 16px;
+            font-size: 18px;
+            text-align: center;
+            font-weight: 500;
         }
 
         /* Responsive */
@@ -280,7 +285,7 @@
             }
 
             .mdu-widget h2 {
-                font-size: 20px;
+                font-size: 32px;
             }
 
             .mdu-widget .comparison {
@@ -296,7 +301,7 @@
     2. In your blog post, switch to HTML/Code view
     3. Paste where you want the widget to appear
     4. Alternatively, save as separate HTML file and use iframe:
-       <iframe src="mdu-widget.html" width="100%" height="650" frameborder="0" style="border-radius: 20px;"></iframe>
+       <iframe src="mdu-widget.html" width="100%" height="700" frameborder="0" style="border-radius: 20px;"></iframe>
     -->
 
     <div class="mdu-widget">
