--- a/index.html
+++ b/index.html
@@ -371,14 +371,16 @@
                 <div class="mini-visual">
                     <div class="comparison">
                         <div class="comparison-item new">
-                            <span class="comparison-label">Oyster Node</span>
-                            <div style="font-size: 24px; margin: 10px 0;">🏢</div>
-                            <div style="font-size: 11px; color: rgba(255,255,255,0.8);">Strand-mounted in high-rise</div>
+                            <span class="comparison-label">SeaStar Node</span>
+                            <div style="margin: 15px 0;">
+                                <img src="https://i.imgur.com/X6GIVYv.jpeg" alt="SeaStar Node" style="width: 80px; height: auto; max-height: 80px; object-fit: contain; border-radius: 8px;">
+                            </div>
                         </div>
                         <div class="comparison-item new">
-                            <span class="comparison-label">SeaStar Node</span>
-                            <div style="font-size: 24px; margin: 10px 0;">🏘️</div>
-                            <div style="font-size: 11px; color: rgba(255,255,255,0.8);">Wall-mounted on garden MDU</div>
+                            <span class="comparison-label">Oyster Node</span>
+                            <div style="margin: 15px 0;">
+                                <img src="https://i.imgur.com/pTzIloH.jpeg" alt="Oyster Node" style="width: 80px; height: auto; max-height: 80px; object-fit: contain; border-radius: 8px;">
+                            </div>
                         </div>
                     </div>
                 </div>
