--- a/index.html
+++ b/index.html
@@ -370,16 +370,16 @@
 
                 <div class="mini-visual">
                     <div class="comparison">
-                        <div class="comparison-item new">
+                        <div class="comparison-item new" style="background: transparent; border: 1px solid rgba(0, 255, 255, 0.5);">
                             <span class="comparison-label">SeaStar Node</span>
                             <div style="margin: 15px 0;">
-                                <img src="https://i.imgur.com/X6GIVYv.jpeg" alt="SeaStar Node" style="width: 80px; height: auto; max-height: 80px; object-fit: contain; border-radius: 8px;">
+                                <img src="https://i.imgur.com/X6GIVYv.jpeg" alt="SeaStar Node" style="width: 160px; height: auto; max-height: 160px; object-fit: contain;">
                             </div>
                         </div>
-                        <div class="comparison-item new">
+                        <div class="comparison-item new" style="background: transparent; border: 1px solid rgba(0, 255, 255, 0.5);">
                             <span class="comparison-label">Oyster Node</span>
                             <div style="margin: 15px 0;">
-                                <img src="https://i.imgur.com/pTzIloH.jpeg" alt="Oyster Node" style="width: 80px; height: auto; max-height: 80px; object-fit: contain; border-radius: 8px;">
+                                <img src="https://i.imgur.com/pTzIloH.jpeg" alt="Oyster Node" style="width: 160px; height: auto; max-height: 160px; object-fit: contain;">
                             </div>
                         </div>
                     </div>
