--- a/index.html
+++ b/index.html
@@ -449,15 +449,19 @@
                     </ul>
                 </div>
 
-                <div class="mini-visual transparent-bg">
-                    <div class="comparison" style="background: transparent;">
-                        <div style="padding: 15px; background: #ffffff; border: 1px solid rgba(0, 255, 255, 0.5); border-radius: 10px;">
-                            <span class="comparison-label" style="color: #00ffff !important; display: block; margin-bottom: 10px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);">SeaStar Node</span>
-                            <img src="https://i.imgur.com/X6GIVYv.jpeg" alt="SeaStar Node" style="width: 160px; height: auto; max-height: 160px; object-fit: contain;">
+                <div style="margin: 20px 0; background: transparent !important; border: none !important; padding: 0 !important;">
+                    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; background: transparent !important;">
+                        <div style="text-align: center; background: transparent !important;">
+                            <div style="color: #00ffff !important; margin-bottom: 10px; font-size: 16px; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">SeaStar Optical Node</div>
+                            <div style="padding: 20px; background-color: white !important; background: white !important; border: 1px solid rgba(0, 255, 255, 0.5); border-radius: 10px; display: flex; align-items: center; justify-content: center; min-height: 180px;">
+                                <img src="https://i.imgur.com/X6GIVYv.jpeg" alt="SeaStar Node" style="width: 140px; height: auto; max-height: 140px; object-fit: contain;">
+                            </div>
                         </div>
-                        <div style="padding: 15px; background: #ffffff; border: 1px solid rgba(0, 255, 255, 0.5); border-radius: 10px;">
-                            <span class="comparison-label" style="color: #00ffff !important; display: block; margin-bottom: 10px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);">Oyster Node</span>
-                            <img src="https://i.imgur.com/pTzIloH.jpeg" alt="Oyster Node" style="width: 160px; height: auto; max-height: 160px; object-fit: contain;">
+                        <div style="text-align: center; background: transparent !important;">
+                            <div style="color: #00ffff !important; margin-bottom: 10px; font-size: 16px; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Oyster Low-Power Node</div>
+                            <div style="padding: 20px; background-color: white !important; background: white !important; border: 1px solid rgba(0, 255, 255, 0.5); border-radius: 10px; display: flex; align-items: center; justify-content: center; min-height: 180px;">
+                                <img src="https://i.imgur.com/pTzIloH.jpeg" alt="Oyster Node" style="width: 140px; height: auto; max-height: 140px; object-fit: contain;">
+                            </div>
                         </div>
                     </div>
                 </div>
