--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             </button>
             <button onclick="showSection(this, 'section2')">
                 <span class="mobile-number">2</span>
-                <span class="desktop-text">Deploy at Edge</span>
+                <span class="desktop-text">Deploy at the Edge</span>
             </button>
             <button onclick="showSection(this, 'section3')">
                 <span class="mobile-number">3</span>
